packages/errors/test/__snapshots__/CONFIG_VALIDATION_ERROR - invalidObject.ansi
[31mYour [33mconfigFile[39m[31m at [94mcypress.config.js[39m[31m set an invalid value:[39m
[31m[39m
[31mExpected [33mdefaultCommandTimeout[39m[31m to be a number.[39m
[31m[39m
[31mInstead the value was: [39m
[31m[39m
[31m[95m{[39m[31m[39m
[31m[95m  "foo": "bar"[39m[31m[39m
[31m[95m}[39m[31m[39m